--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-typed": "^1.1.2",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
